refactor(tests): migrate from unittest to pytest
- Replace unittest with pytest framework
- Add pytest configuration in pyproject.toml
- Add coverage reporting with pytest-cov
- Rewrite README.test.md with pytest instructions
- Update .gitignore for coverage files
- Add pyproject.toml for modern Python packaging

Benefits:
- Cleaner test code with fixtures
- Better reporting and error messages
- Built-in code coverage
- Parallel test execution support

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,12 @@ ENV/
 *.log
 *.sqlite
 
+# Test coverage
+.coverage
+htmlcov/
+coverage.xml
+.coverage.*
+
 
 context-file.txt
 project_context.txt
