--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=64", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "codecontextor"
+name = "contextor"
 version = "1.1.0"
 description = "Create context files from your codebase for AI conversations"
 readme = "README.md"
@@ -20,8 +20,8 @@ classifiers = [
 ]
 
 [project.scripts]
-codecontextor = "codecontextor.main:main"
+contextor = "contextor.main:main"
 
 [tool.pytest.ini_options]
-addopts = ["--verbose", "--cov=codecontextor", "--cov-report=term-missing", "--cov-report=html"]
+addopts = ["--verbose", "--cov=contextor", "--cov-report=term-missing", "--cov-report=html"]
 testpaths = ["tests"]
