--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,12 @@ authors = [
     {name = "Salih Ergüt", email = "salih.ergut@gmail.com"}
 ]
 requires-python = ">=3.8"
-dependencies = ["pathspec>=0.12.1", "pyperclip>=1.8.2", "questionary>=1.10.0"]
+dependencies = [
+    "pathspec>=0.12.1",
+    "pyperclip>=1.8.2",
+    "questionary>=1.10.0",
+    "tomli>=2.0.1"
+]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
